feat: Ajustando modulo grpc e criando os metodos de integracao para registro do sistema