@@ -94,6 +94,7 @@
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.time=ALL-UNNAMED
+                        --add-opens java.base/sun.misc=ALL-UNNAMED
                     </jvmArguments>
                 </configuration>
             </plugin>
